Working on 'splitting into modules'